# local-infer-core

./: .gitignore  Cargo.toml  IMPLEMENTATION.md  PRODUCT.md  README.md  requirements.txt
.github/workflows/: release.yml
crates/infer-core/: Cargo.toml
crates/infer-core-ffi/: Cargo.toml  build.rs
crates/infer-core-ffi/src/: lib.rs
crates/infer-core/src/: error.rs  icon_rasterize.rs  lib.rs  manifest.rs  mnn_lifecycle.rs  mnn_util.rs  registry.rs  runtime.rs
crates/infer-core/src/embed/: mnn.rs  mod.rs  ort.rs  preprocess.rs
crates/infer-core/src/helper/: icon_index_build.rs  icon_index_convert.rs  icon_rasterize_cli.rs  mod.rs
crates/infer-core/src/icon_index/: mod.rs
crates/infer-core/src/ocr/: mnn.rs  mod.rs  ort.rs  resize.rs
crates/infer-core/src/runtime/: capabilities.rs  mnn.rs  mod.rs  ort.rs
crates/infer-core/tests/: ocr.rs  registry.rs
crates/infer-core/tests/fixtures/embed.mobileclip2-s0.mnn.fp32/: manifest.json
crates/infer-core/tests/fixtures/embed.mobileclip2-s0.mnn.int8/: NOTICE  manifest.json
crates/infer-core/tests/fixtures/embed.mobileclip2-s0.onnx.fp32/: manifest.json
crates/infer-core/tests/fixtures/embed.mobileclip2-s0.onnx.int8/: NOTICE  manifest.json
crates/infer-core/tests/fixtures/icons.bundled.v1.mobileclip2-s0.int8/: NOTICE  manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-medium.mnn.fp32/: LICENSE  NOTICE  manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-medium.onnx.fp32/: manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-small.mnn.fp32/: manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-small.onnx.fp32/: manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-tiny.mnn.fp32/: manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-tiny.onnx.fp32/: manifest.json
crates/infer-core/tests/fixtures/ocr.paddle.ppocr6-tiny.onnx.int8/: NOTICE  manifest.json
crates/mnn/: Cargo.toml
crates/mnn-sys/: BUILD.md  Cargo.toml  build.rs
crates/mnn-sys/mnn_c/: runtime_probe_c.cpp  runtime_probe_c.h  stl_link_shim.cpp  tensor_c.cpp  tensor_c.h
crates/mnn-sys/mnn_cpp/: session_info.rs
crates/mnn-sys/src/: lib.rs  mnn_c.rs
crates/mnn/src/: interpreter.rs  session.rs
dart/: pubspec.yaml
dart/.dart_tool/: package_config.json  package_graph.json
dart/android/: build.gradle
dart/android/src/main/: AndroidManifest.xml
dart/assets/: catalog.json
dart/hook/: build.dart  catalog_config.dart  native_release.dart  native_release_fetch.dart  release_config.dart
dart/lib/: local_infer_core.dart
dart/lib/src/: embed_engine.dart  exceptions.dart  ffi_bindings.dart  ffi_native.dart  ffi_types.dart  icon_index.dart  model_catalog.dart  native_library.dart  native_release.dart  native_release_fetch.dart  ocr_engine.dart  pack_catalog.dart  pack_release.dart  registry.dart  runtime_capabilities.dart  runtime_config.dart
dart/windows/: CMakeLists.txt
docs/dev/: DART_API.md  FFI_API.md  PRODUCT.md  RUNTIME_VISIBILITY.md  RUST_API.md
include/: infer_core.h
packs/shared/embed/: LICENSE
packs/shared/icons/: LICENSE  NOTICE
schema/: manifest.v1.json
scripts/: build_all_mnn_packs.ps1  build_android.ps1  build_embed_mnn_all.ps1  build_embed_mnn_pack.ps1  build_mnn_android_x86_64.ps1  build_ppocr6_mnn_all.ps1  build_ppocr6_mnn_pack.ps1  build_release_android.ps1  build_release_windows.ps1  cargo_retry.ps1  download_all_packs.ps1  download_embed_all.ps1  download_embed_mobileclip2_pack.ps1  download_icon_libraries.ps1  download_icons.ps1  download_mdi_icons.ps1  download_mnn_android.ps1  download_mnn_windows.ps1  download_ppocr6_all.ps1  download_ppocr6_pack.ps1  download_ppocr6_tiny_fixture.ps1  icon_assets.ps1  patch_mnn_sys.ps1  test_release_windows.ps1
scripts/packs/: catalog.ps1  mnn.ps1  ppocr6.ps1  release.ps1
tools/icon-index/: build_bundled.ps1
tools/pack/: pack-all.ps1  pack.ps1
