[package]
name = "infer-core-ffi"
description = "C ABI for infer-core (infer_core.dll / libinfer_core.so)"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "infer_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
image = "0.25"
infer-core = { path = "../infer-core" }
