[package]
name = "infer-core-ffi"
description = "C ABI for infer-core (infer_core.dll / libinfer_core.so)"
version.workspace = true
edition.workspace = true
license.workspace = true
build = "build.rs"

[features]
default = ["backend-ort"]
backend-ort = ["infer_core_lib/backend-ort"]
backend-mnn = ["infer_core_lib/backend-mnn"]

[lib]
name = "infer_core"
crate-type = ["cdylib", "staticlib"]

[dependencies]
image = "0.25"
infer_core_lib = { package = "infer-core", path = "../infer-core", default-features = false }
serde_json = "1"
