[package]
name = "infer-core"
description = "Manifest-driven local inference: OCR, embeddings, icon index"
version.workspace = true
edition.workspace = true
license.workspace = true

[features]
default = ["ort-directml"]
ort-directml = ["ort/directml", "oar-ocr/directml"]
ort-coreml = ["ort/coreml"]
ort-cuda = ["ort/cuda"]

[dependencies]
image = "0.25"
oar-ocr = { version = "0.7.1", features = ["download-binaries"] }
ort = { version = "2.0.0-rc.12", default-features = false, features = ["download-binaries", "ndarray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rayon = "1.10"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "icon-index-build"
path = "src/bin/icon_index_build.rs"
